yaml/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: insecure@file
  name: helm-apiserver
  namespace: helm-ns
spec:
  selector:
    app: helm-apiserver
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  type: ClusterIP # ingress 설치 기준
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-apiserver
  namespace: helm-ns
  labels:
    app: helm-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-apiserver
  template:
    metadata:
      labels:
        app: helm-apiserver
    spec:
      serviceAccountName: helm-apiserver-sa
      containers:
      - name: helm-apiserver
        image: docker.io/tmaxcloudck/helm-apiserver:{helmApiServerVersion}
        imagePullPolicy: Always
        volumeMounts:
          - name: helm-apiserver-data
            mountPath: /tmp
          - name: helm-apiserver-cert
            mountPath: /tmp/cert
      volumes:
      - name: helm-apiserver-data
        persistentVolumeClaim:
          claimName: helm-apiserver-pvc
      - name: helm-apiserver-cert
        secret:
          defaultMode: 420
          secretName: helm-apiserver-cert
